# CpuRayTracer

./: .gitignore  CMakeLists.txt  CpuRayTracer.sln  CpuRayTracer.vcxproj  CpuRayTracer.vcxproj.filters  README.md  camera.h  main.cpp
.github/workflows/: cmake_vcpkg.yml
src/: camera.cpp  camera.h  main.cpp  pixel.h  ray.cpp  ray.h
src/lights/: light.cpp  light.h
src/math/: MathUtil.cpp  Point.cpp  Point.h  mathutil.cpp  mathutil.h  point.cpp  point.h  vector.cpp  vector.h
src/objects/: intersection.h  material.h  sceneobj.cpp  sceneobj.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h  triangle.cpp  triangle.h
src/scenes/: scene.cpp  scene.h  scene1.h
src/tests/: point_tests.h  tests.h  vector_tests.h
src/util/: imgutil.h
tests/: tests.h
